fix path image and fix animation section our awesome stats.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			<h2 class="sec-title">FEATURES</h2>
 			<div class="feat-box">
 				<div class="feat">
-					<div class="header"><img src="/image/features-01.jpg" alt="image"></div>
+					<div class="header"><img src="image/features-01.jpg" alt="image"></div>
 					<div class="content">
 						<div class="title-feat">Quality</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
@@ -223,7 +223,7 @@
 					<div class="footer"><a>More</a></div>
 				</div>
 				<div class="feat">
-					<div class="header"><img src="/image/features-02.jpg" alt="image"></div>
+					<div class="header"><img src="image/features-02.jpg" alt="image"></div>
 					<div class="content">
 						<div class="title-feat">Time</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
@@ -231,7 +231,7 @@
 					<div class="footer"><a>More</a></div>
 				</div>
 				<div class="feat">
-					<div class="header"><img src="/image/features-03.jpg" alt="image"></div>
+					<div class="header"><img src="image/features-03.jpg" alt="image"></div>
 					<div class="content">
 						<div class="title-feat">Passion</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
@@ -248,7 +248,7 @@
 			<h2 class="sec-title">TESTIMONIALS</h2>
 			<div class="cards">
 				<div class="card">
-					<img src="/image/avatar-01.png" alt="image">
+					<img src="image/avatar-01.png" alt="image">
 					<div class="title">
 						<h3>Mohamed Farag</h3>
 						<span>Full Stack Developer</span>
@@ -263,7 +263,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
 				</div>
 				<div class="card">
-					<img src="/image/avatar-02.png" alt="image">
+					<img src="image/avatar-02.png" alt="image">
 					<div class="title">
 						<h3>Mohamed Farag</h3>
 						<span>Full Stack Developer</span>
@@ -278,7 +278,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
 				</div>
 				<div class="card">
-					<img src="/image/avatar-03.png" alt="image">
+					<img src="image/avatar-03.png" alt="image">
 					<div class="title">
 						<h3>Mohamed Farag</h3>
 						<span>Full Stack Developer</span>
@@ -293,7 +293,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
 				</div>
 				<div class="card">
-					<img src="/image/avatar-04.png" alt="image">
+					<img src="image/avatar-04.png" alt="image">
 					<div class="title">
 						<h3>Mohamed Farag</h3>
 						<span>Full Stack Developer</span>
@@ -308,7 +308,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
 				</div>
 				<div class="card">
-					<img src="/image/avatar-05.png" alt="image">
+					<img src="image/avatar-05.png" alt="image">
 					<div class="title">
 						<h3>Mohamed Farag</h3>
 						<span>Full Stack Developer</span>
@@ -323,7 +323,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
 				</div>
 				<div class="card">
-					<img src="/image/avatar-06.png" alt="image">
+					<img src="image/avatar-06.png" alt="image">
 					<div class="title">
 						<h3>Mohamed Farag</h3>
 						<span>Full Stack Developer</span>
@@ -348,7 +348,7 @@
 			<div class="cards">
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-01.jpg" alt="image">
+						<img src="image/team-01.jpg" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -363,7 +363,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-02.jpg" alt="image">
+						<img src="image/team-02.jpg" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -378,7 +378,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-03.jpg" alt="image">
+						<img src="image/team-03.jpg" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -393,7 +393,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-04.jpg" alt="image">
+						<img src="image/team-04.jpg" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -408,7 +408,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-05.png" alt="image">
+						<img src="image/team-05.png" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -423,7 +423,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-06.png" alt="image">
+						<img src="image/team-06.png" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -438,7 +438,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-07.jpg" alt="image">
+						<img src="image/team-07.jpg" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -453,7 +453,7 @@
 				</div>
 				<div class="card">
 					<div class="content">
-						<img src="/image/team-08.jpg" alt="image">
+						<img src="image/team-08.jpg" alt="image">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -538,7 +538,7 @@
 		<div class="container">
 			<h2 class="sec-title">OUR SKILLS</h2>
 			<div class="box">
-				<img src="/image/skills.png" alt="image">
+				<img src="image/skills.png" alt="image">
 				<div class="data">
 					<span>HTML</span>
 					<div class="line"></div>
@@ -558,24 +558,24 @@
 		<div class="container">
 			<h2 class="sec-title">HOW IT WORKS ?</h2>
 			<div class="box">
-				<img src="/image/work-steps.png" alt="image">
+				<img src="image/work-steps.png" alt="image">
 				<div class="cards">
 					<div class="card">
-						<img src="/image/work-steps-1.png" alt="image">
+						<img src="image/work-steps-1.png" alt="image">
 						<div class="text">
 							<h3>Business Analysis</h3>
 							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quas magni quos eum totam cumque sed error dolores impedit sit magnam atque, officia temporibus vitae maiores corrupti veniam natus adipisci!</p>
 						</div>
 					</div>
 					<div class="card">
-						<img src="/image/work-steps-2.png" alt="image">
+						<img src="image/work-steps-2.png" alt="image">
 						<div class="text">
 							<h3>Architecture</h3>
 							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quas magni quos eum totam cumque sed error dolores impedit sit magnam atque, officia temporibus vitae maiores corrupti veniam natus adipisci!</p>
 						</div>
 					</div>
 					<div class="card">
-						<img src="/image/work-steps-3.png" alt="image">
+						<img src="image/work-steps-3.png" alt="image">
 						<div class="text">
 							<h3>Developement</h3>
 							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quas magni quos eum totam cumque sed error dolores impedit sit magnam atque, officia temporibus vitae maiores corrupti veniam natus adipisci!</p>
@@ -591,7 +591,7 @@
 		<div class="container">
 			<h2 class="sec-title">LATEST EVENTS</h2>
 			<div class="box">
-				<img src="/image/events.png" alt="image">
+				<img src="image/events.png" alt="image">
 				<div class="count-down-box">
 					<div class="count-down">
 						<div class="days count">
@@ -624,8 +624,8 @@
 				</form>
 			</div>
 			<div class="dots up hidden-small-screen">
-				<img src="/image/dots.png" alt="image">
-				<img src="/image/dots.png" alt="image">
+				<img src="image/dots.png" alt="image">
+				<img src="image/dots.png" alt="image">
 			</div>
 		</div>
 	</section>
@@ -638,7 +638,7 @@
 				<div class="card">
 					<div class="header">
 						<h3>Basic</h3>
-						<img src="/image/hosting-basic.png" alt="image">
+						<img src="image/hosting-basic.png" alt="image">
 						<div class="price">$15</div>
 						<span>Per Month</span>
 					</div>
@@ -655,7 +655,7 @@
 					<div class="label">Most Popular</div>
 					<div class="header">
 						<h3>Advanced</h3>
-						<img src="/image/hosting-advanced.png" alt="image">
+						<img src="image/hosting-advanced.png" alt="image">
 						<div class="price">$25</div>
 						<span>Per Month</span>
 					</div>
@@ -671,7 +671,7 @@
 				<div class="card">
 					<div class="header">
 						<h3>Professional</h3>
-						<img src="/image/hosting-professional.png" alt="image">
+						<img src="image/hosting-professional.png" alt="image">
 						<div class="price">$45</div>
 						<span>Per Month</span>
 					</div>
@@ -686,8 +686,8 @@
 				</div>
 			</div>
 			<div class="dots down">
-				<img src="/image/dots.png" alt="image">
-				<img src="/image/dots.png" alt="image">
+				<img src="image/dots.png" alt="image">
+				<img src="image/dots.png" alt="image">
 			</div>
 		</div>
 	</section>
@@ -743,7 +743,7 @@
 					</li>
 				</ul>
 				<div class="container-video">
-					<img src="/image/video-preview.jpg" alt="image">
+					<img src="image/video-preview.jpg" alt="image">
 					<span>Everything About The Virtual Hosts</span>
 				</div>
 			</div>
@@ -785,7 +785,7 @@
 			<div class="content">
 				<h2>We Have A Discount</h2>
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
-				<img src="/image/discount.png" alt="image">
+				<img src="image/discount.png" alt="image">
 			</div>
 			<div class="request">
 				<div class="form-box">
@@ -837,12 +837,12 @@
 					</div>
 				</div>
 				<div class="fot-glry">
-					<img src="/image/gallery-01.png" alt="image">
-					<img src="/image/gallery-02.png" alt="image">
-					<img src="/image/gallery-03.jpg" alt="image">
-					<img src="/image/gallery-04.png" alt="image">
-					<img src="/image/gallery-05.jpg" alt="image">
-					<img src="/image/gallery-06.png" alt="image">
+					<img src="image/gallery-01.png" alt="image">
+					<img src="image/gallery-02.png" alt="image">
+					<img src="image/gallery-03.jpg" alt="image">
+					<img src="image/gallery-04.png" alt="image">
+					<img src="image/gallery-05.jpg" alt="image">
+					<img src="image/gallery-06.png" alt="image">
 				</div>
 			</div>
 		</div>
