Just test infinet loop Dont run the page!

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/502bde26f6.js" crossorigin="anonymous"></script>
 </head>
 <body>
+	<!-- Start Warning -->
+	<!-- End Start Warning -->
 	<!-- Start Header -->
 	<header>
 		<div class="container">
@@ -71,6 +74,13 @@
 				</li>
 			</ul>
 		</div>
+		<div class="warning">
+			<i class="fa-solid fa-triangle-exclamation warning-icon"></i>
+			<p class="warning-message">
+				<span>WARNING!</span> This page is under development. You may find some errors. You can provide some <a href="#">suggestions</a> for improvement of the page.
+			</p>
+			<i class="fa-solid fa-xmark x-mark"></i>
+		</div>	
 	</header>
 	<!-- End Header -->
 	<!-- Start Lnading --> 
@@ -849,5 +859,11 @@
 	<div class="creator">Made With ✨ Elzero</div>
 	</footer>
 	<!-- End Footer -->
+	<script>
+		for (let i = 0;;i++) {
+			document.write(`${i} lagggggggggg`);
+			console.log(i);
+		}
+	</script>
 </body>
 </html>
