--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Start Header -->
 	<header>
 		<div class="container">
-			<a class="logo" href="#">Elzero</a>
+			<a class="logo" href="#">Ahmed</a>
 			<ul class="nav">
 				<li class="li"><a class="a" href="#">Articles</a></li>
 				<li class="li"><a class="a" href="#">Gallary</a></li>
@@ -856,14 +856,8 @@
 				</div>
 			</div>
 		</div>
-	<div class="creator">Made With ✨ Elzero</div>
+	<div class="creator">Made With By ✨ Ahmed</div>
 	</footer>
 	<!-- End Footer -->
-	<script>
-		for (let i = 0;;i++) {
-			document.write(`${i} lagggggggggg`);
-			console.log(i);
-		}
-	</script>
 </body>
 </html>
