change some texts and hidden warning bar

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<section class="landing">
 		<div class="container">
 			<div class="text">
-				<h1>Welcome, To Elzero World</h1>
+				<h1>Welcome, To Ahmed World</h1>
 				<p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
 			</div>
 			<div class="image"><img src="image/landing-image.png"></div>
@@ -817,7 +817,7 @@
 		<div class="container">
 			<div class="box-footer">
 				<div class="contact">
-					<h3>Thanks Elzero</h3>
+					<h3>Thanks Elzero 🤍</h3>
 					<div class="social">
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
@@ -856,7 +856,7 @@
 				</div>
 			</div>
 		</div>
-	<div class="creator">Made With By ✨ Ahmed</div>
+	<div class="creator">Made With 🤍 By ✨ Ahmed</div>
 	</footer>
 	<!-- End Footer -->
 </body>
