change some text content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Ninjas</title>
 	<link rel="stylesheet" type="text/css" href="css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="css/Normaliz.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,7 +18,7 @@
 	<!-- Start Header -->
 	<header>
 		<div class="container">
-			<a class="logo" href="#">Ahmed</a>
+			<a class="logo" href="#">Code Ninjas</a>
 			<ul class="nav">
 				<li class="li"><a class="a" href="#">Articles</a></li>
 				<li class="li"><a class="a" href="#">Gallary</a></li>
@@ -87,8 +87,8 @@
 	<section class="landing">
 		<div class="container">
 			<div class="text">
-				<h1>Welcome, To Ahmed World</h1>
-				<p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
+				<h1>Welcome, To Ninjas World</h1>
+				<p>We are a team of web developers who specialize in developing custom websites development.</p>
 			</div>
 			<div class="image"><img src="image/landing-image.png"></div>
 			<a href="#"><i class="fas fa-angle-double-down arrow"></i></a>
@@ -817,7 +817,7 @@
 		<div class="container">
 			<div class="box-footer">
 				<div class="contact">
-					<h3>Thanks Elzero 🤍</h3>
+					<h3>Code Ninjas 🐱‍💻</h3>
 					<div class="social">
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
@@ -856,7 +856,7 @@
 				</div>
 			</div>
 		</div>
-	<div class="creator">Made With 🤍 By ✨ Ahmed</div>
+	<div class="creator">Made With 🤍 By ✨ Ahmed Nasser</div>
 	</footer>
 	<!-- End Footer -->
 </body>
